[package]
name = "knit"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "Consensus fusion: RRF, Borda, Ensemble"
repository = "https://github.com/arclabs561/knit"
keywords = ["rank-fusion", "retrieval", "rrf"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[[bench]]
name = "fusion"
harness = false
path = "benches/fusion.rs"

